# python-code-assistant-skill

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
references/: local_docs_index.json
scripts/: cache.py  code_analyzer.py  debug_wrapper.py  doc_lookup.py  health_check.py  inspect_env.py
tests/: __init__.py  test_basic.py
