[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-code-assistant-skill"
dynamic = ["version"]
description = "Agent Skill for generating, analyzing, and debugging Python code using only local context"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "spkc83 & Opencode" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>.+)"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
